// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications should emit transactionClick event 1`] = `
<div>
  <div
    class="styles__NotificationsWrapper-fnayqc-0 iUAjZu"
    data-testid="NotificationsWrapper"
  >
    <div
      class="-top-5 z-10 py-4 pr-8 pl-4 -mx-4 mb-2 text-sm font-bold text-theme-neutral"
    >
      Plugins
    </div>
    <div
      class="sc-AxirZ jhHiEf"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            data-testid="NotificationItem"
          >
            <td
              class="w-8 h-8"
            >
              <div
                class="flex justify-center items-center my-2 mr-4 w-8 h-8 text-white align-middle rounded-lg bg-logo"
              />
            </td>
            <td>
              <div>
                <span
                  class="font-bold text-md text-theme-neutral-600"
                >
                  ARK Desktop Wallet
                </span>
                <span
                  class="text-md text-theme-neutral-600"
                >
                   
                  - update v2.5.6
                </span>
              </div>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="NotificationItem__action"
              >
                Update
              </div>
            </td>
          </tr>
          <tr
            data-testid="NotificationItem"
          >
            <td
              class="w-8 h-8"
            >
              <div
                class="flex justify-center items-center my-2 mr-4 w-8 h-8 text-white align-middle rounded-lg bg-logo"
              />
            </td>
            <td>
              <div>
                <span
                  class="font-bold text-md text-theme-neutral-600"
                >
                  ARK Avatars
                </span>
                <span
                  class="text-md text-theme-neutral-600"
                >
                   
                  - update v4
                </span>
              </div>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="NotificationItem__action"
              >
                Update
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="mt-4"
    >
      <div
        class="-top-5 z-10 py-1 pr-8 pl-4 -mx-4 text-sm font-bold text-theme-neutral"
      >
        Transactions
      </div>
      <div
        class="sc-AxirZ jhHiEf"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxhCb ivWAPv group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-AxiKw fVmMMg space-x-3"
                >
                  <div
                    class="flex items-center -space-x-1"
                    data-testid="TransactionRowMode"
                  >
                    <div
                      class="sc-AxgMl jjHZYc border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        data-testid="TransactionRowMode__Received"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="sc-AxheI fniENP text-theme-text truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr7B … s6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw eDJbGU justify-end"
                >
                  <div
                    class="sc-AxhUy dVEcwV whitespace-no-wrap"
                    color="success"
                    data-testid="TransactionRowAmount"
                  >
                    <span
                      data-testid="Amount"
                    >
                      + 20 DARK
                    </span>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="sc-AxhCb ivWAPv group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-AxiKw fVmMMg space-x-3"
                >
                  <div
                    class="flex items-center -space-x-1"
                    data-testid="TransactionRowMode"
                  >
                    <div
                      class="sc-AxgMl jjHZYc border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        data-testid="TransactionRowMode__Received"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="sc-AxheI fniENP text-theme-text truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr7B … s6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw eDJbGU justify-end"
                >
                  <div
                    class="sc-AxhUy dVEcwV whitespace-no-wrap"
                    color="success"
                    data-testid="TransactionRowAmount"
                  >
                    <span
                      data-testid="Amount"
                    >
                      + 0.0000001 DARK
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications should render with empty notifications 1`] = `
<div>
  <div
    class="styles__NotificationsWrapper-fnayqc-0 iUAjZu"
  >
    <div
      class="p-6 mb-5 rounded-xl border-2 border-theme-neutral-300 dark:border-theme-neutral-800 text-md text-theme-secondary-text"
    >
      You have no notifications at this time
    </div>
    <div>
      <div
        class="sc-AxjAm deEstu"
        height="80"
        width="200"
      >
        <svg>
          placeholder.svg
        </svg>
      </div>
    </div>
    <div
      class="my-3 border-2 border-b border-theme-neutral-contrast"
    />
    <div>
      <div
        class="sc-AxjAm deEstu"
        height="80"
        width="200"
      >
        <svg>
          placeholder.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications should render with plugins 1`] = `
<div>
  <div
    class="styles__NotificationsWrapper-fnayqc-0 iUAjZu"
    data-testid="NotificationsWrapper"
  >
    <div
      class="-top-5 z-10 py-4 pr-8 pl-4 -mx-4 mb-2 text-sm font-bold text-theme-neutral"
    >
      Plugins
    </div>
    <div
      class="sc-AxirZ jhHiEf"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            data-testid="NotificationItem"
          >
            <td
              class="w-8 h-8"
            >
              <div
                class="flex justify-center items-center my-2 mr-4 w-8 h-8 text-white align-middle rounded-lg bg-logo"
              />
            </td>
            <td>
              <div>
                <span
                  class="font-bold text-md text-theme-neutral-600"
                >
                  ARK Desktop Wallet
                </span>
                <span
                  class="text-md text-theme-neutral-600"
                >
                   
                  - update v2.5.6
                </span>
              </div>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="NotificationItem__action"
              >
                Update
              </div>
            </td>
          </tr>
          <tr
            data-testid="NotificationItem"
          >
            <td
              class="w-8 h-8"
            >
              <div
                class="flex justify-center items-center my-2 mr-4 w-8 h-8 text-white align-middle rounded-lg bg-logo"
              />
            </td>
            <td>
              <div>
                <span
                  class="font-bold text-md text-theme-neutral-600"
                >
                  ARK Avatars
                </span>
                <span
                  class="text-md text-theme-neutral-600"
                >
                   
                  - update v4
                </span>
              </div>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="NotificationItem__action"
              >
                Update
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="mt-4"
    >
      <div
        class="-top-5 z-10 py-1 pr-8 pl-4 -mx-4 text-sm font-bold text-theme-neutral"
      >
        Transactions
      </div>
      <div
        class="sc-AxirZ jhHiEf"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxhCb ivWAPv group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-AxiKw fVmMMg space-x-3"
                >
                  <div
                    class="flex items-center -space-x-1"
                    data-testid="TransactionRowMode"
                  >
                    <div
                      class="sc-AxgMl jjHZYc border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        data-testid="TransactionRowMode__Received"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="sc-AxheI fniENP text-theme-text truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr7B … s6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw eDJbGU justify-end"
                >
                  <div
                    class="sc-AxhUy dVEcwV whitespace-no-wrap"
                    color="success"
                    data-testid="TransactionRowAmount"
                  >
                    <span
                      data-testid="Amount"
                    >
                      + 20 DARK
                    </span>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="sc-AxhCb jCOJxD group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-AxiKw hWtRbB space-x-3"
                >
                  <div
                    class="flex items-center -space-x-1"
                  >
                    <div
                      class="sc-AxgMl jjHZYc leading-none border-transparent"
                    >
                      <span>
                        <span
                          class="flex items-center leading-none"
                        >
                          <span
                            class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                            style="width: 32px; height: 32px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                          ‌
                        </span>
                      </span>
                    </div>
                    <div
                      class="sc-AxgMl jjHZYc leading-none border-transparent"
                    >
                      <span>
                        <span
                          class="flex items-center leading-none"
                        >
                          <span
                            class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                            style="width: 32px; height: 32px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                          ‌
                        </span>
                      </span>
                    </div>
                  </div>
                  <span>
                    <span
                      class="flex items-center leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                        style="width: 123px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw eIwGCV justify-end"
                >
                  <span
                    class="flex items-center px-2 space-x-1 h-7 rounded border border-theme-neutral-300 dark:border-theme-neutral-800"
                  >
                    <span>
                      <span
                        class="flex items-center leading-none"
                      >
                        <span
                          class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                          style="width: 120px; height: 16px;"
                        >
                          ‌
                        </span>
                        ‌
                      </span>
                    </span>
                    <span>
                      <span
                        class="flex items-center leading-none"
                      >
                        <span
                          class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                          style="width: 35px; height: 16px;"
                        >
                          ‌
                        </span>
                        ‌
                      </span>
                    </span>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications should render with transactions and plugins 1`] = `
<div>
  <div
    class="styles__NotificationsWrapper-fnayqc-0 iUAjZu"
    data-testid="NotificationsWrapper"
  >
    <div
      class="-top-5 z-10 py-4 pr-8 pl-4 -mx-4 mb-2 text-sm font-bold text-theme-neutral"
    >
      Plugins
    </div>
    <div
      class="sc-AxirZ jhHiEf"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            data-testid="NotificationItem"
          >
            <td
              class="w-8 h-8"
            >
              <div
                class="flex justify-center items-center my-2 mr-4 w-8 h-8 text-white align-middle rounded-lg bg-logo"
              />
            </td>
            <td>
              <div>
                <span
                  class="font-bold text-md text-theme-neutral-600"
                >
                  ARK Desktop Wallet
                </span>
                <span
                  class="text-md text-theme-neutral-600"
                >
                   
                  - update v2.5.6
                </span>
              </div>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="NotificationItem__action"
              >
                Update
              </div>
            </td>
          </tr>
          <tr
            data-testid="NotificationItem"
          >
            <td
              class="w-8 h-8"
            >
              <div
                class="flex justify-center items-center my-2 mr-4 w-8 h-8 text-white align-middle rounded-lg bg-logo"
              />
            </td>
            <td>
              <div>
                <span
                  class="font-bold text-md text-theme-neutral-600"
                >
                  ARK Avatars
                </span>
                <span
                  class="text-md text-theme-neutral-600"
                >
                   
                  - update v4
                </span>
              </div>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="NotificationItem__action"
              >
                Update
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="mt-4"
    >
      <div
        class="-top-5 z-10 py-1 pr-8 pl-4 -mx-4 text-sm font-bold text-theme-neutral"
      >
        Transactions
      </div>
      <div
        class="sc-AxirZ jhHiEf"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <tbody
            role="rowgroup"
          >
            <tr
              class="sc-AxhCb ivWAPv group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-AxiKw fVmMMg space-x-3"
                >
                  <div
                    class="flex items-center -space-x-1"
                    data-testid="TransactionRowMode"
                  >
                    <div
                      class="sc-AxgMl jjHZYc border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        data-testid="TransactionRowMode__Received"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="sc-AxheI fniENP text-theme-text truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr7B … s6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw eDJbGU justify-end"
                >
                  <div
                    class="sc-AxhUy dVEcwV whitespace-no-wrap"
                    color="success"
                    data-testid="TransactionRowAmount"
                  >
                    <span
                      data-testid="Amount"
                    >
                      + 20 DARK
                    </span>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="sc-AxhCb ivWAPv group"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="sc-AxiKw fVmMMg space-x-3"
                >
                  <div
                    class="flex items-center -space-x-1"
                    data-testid="TransactionRowMode"
                  >
                    <div
                      class="sc-AxgMl jjHZYc border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                    >
                      <div
                        class="sc-AxjAm cpczEI"
                        data-testid="TransactionRowMode__Received"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="inline-flex items-center"
                  >
                    <span
                      class="sc-AxheI fniENP text-theme-text truncate font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      D8rr7B … s6YUYD
                    </span>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="sc-AxiKw eDJbGU justify-end"
                >
                  <div
                    class="sc-AxhUy dVEcwV whitespace-no-wrap"
                    color="success"
                    data-testid="TransactionRowAmount"
                  >
                    <span
                      data-testid="Amount"
                    >
                      + 0.0000001 DARK
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
